# crawl4ai-v2

./: .gitignore  Caddyfile  Dockerfile  FREE_EMBEDDINGS_SETUP.md  LICENSE  README.md  WINDOWS_SETUP.md  docker-compose.override.private.yml  docker-compose.override.public.yml  docker-compose.override.yml  docker-compose.yml  migrate_to_local_embeddings.sql  pyproject.toml  requirements.txt  restart_crawl4ai.bat  restart_crawl4ai.ps1  restart_crawl4ai.sh  test_local_embeddings.py
docs/reference/: another-README.md  calling-crawl4ai-tools.md  crawl4ai-usage-guide.md  local-embeddings-migration.md
docs/sql/: setup_local_embeddings.sql
knowledge_graphs/: ollama_knowledge_extractor.py
src/: crawl4ai_mcp.py  utils.py
windows-setup/: .env.example  README.md  install.ps1
windows-setup/src/: crawl4ai_mcp.py  utils.py
